# rinha2024

./: .env  Cargo.toml  Dockerfile  charge-test.sh  docker-compose.yml  entrypoint.sh
http/: create_transaction.http  extrato.http
migrations/: 20240215194128_create_tables.sql
src/: main.rs
